--- a/src/main/java/fxml/ContenidoPrincipal.fxml
+++ b/src/main/java/fxml/ContenidoPrincipal.fxml
@@ -39,78 +39,19 @@
             </MenuBar>
             <HBox prefHeight="79.0" prefWidth="1200.0">
                <children>
+                  <AnchorPane fx:id="contenedor_botones_acciones1" prefHeight="89.0" prefWidth="79.0">
+                     <children>
+                        <ImageView fitHeight="80.0" fitWidth="89.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@Imagenes/fork_lift_icon.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
                   <AnchorPane fx:id="contenedor_botones_acciones" prefHeight="100.0" />
                   <AnchorPane prefHeight="81.0" prefWidth="900.0">
                      <children>
                         <Separator layoutX="1.0" layoutY="9.0" orientation="VERTICAL" prefHeight="80.0" />
-                        <Button layoutX="62.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="59.0" prefWidth="0.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/email_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Correo" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
-                        <Button layoutX="147.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/print_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Imprimir" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
-                        <Button layoutX="231.0" layoutY="11.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/reload_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Recargar" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
-                        <Button layoutX="319.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
-                           <graphic>
-                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/help_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Ayuda" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
                      </children>
                   </AnchorPane>
                </children>
