--- a/src/main/java/fxml/Despachos/Envios/Envios.fxml
+++ b/src/main/java/fxml/Despachos/Envios/Envios.fxml
@@ -166,7 +166,7 @@
                                  </font>
                               </Label>
                               <ComboBox fx:id="ordenes_compra_combobox" layoutX="156.0" layoutY="85.0" prefWidth="150.0" />
-                              <Button layoutX="601.0" layoutY="12.0" mnemonicParsing="false" onAction="#agregarCliente" text="+" />
+                              <Button fx:id="boton_agregar_cliente" layoutX="601.0" layoutY="12.0" mnemonicParsing="false" onAction="#agregarCliente" text="+" />
                            </children>
                         </AnchorPane>
                      </children>
