--- a/src/main/java/fxml/Materiales/Racks/Racks.fxml
+++ b/src/main/java/fxml/Materiales/Racks/Racks.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.RacksController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.RacksController">
    <children>
       <Pane prefHeight="50.0" prefWidth="243.0">
          <children>
@@ -59,8 +59,11 @@
                     <columns>
                       <TableColumn fx:id="rack_form_producto_cod_column" prefWidth="142.0" text="Código" />
                         <TableColumn fx:id="rack_form_producto_nombre_column" prefWidth="130.0" text="Nombre" />
-                        <TableColumn fx:id="rack_form_producto_fecha_venc_column" prefWidth="137.0" text="Fecha Vencimineto" />
+                        <TableColumn fx:id="rack_form_producto_posicion_column" prefWidth="137.0" text="Posicion" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                   <TitledPane animated="false" collapsible="false" layoutX="530.0" layoutY="229.0" prefHeight="273.0" prefWidth="177.0" text="Acciones">
                      <content>
@@ -74,7 +77,7 @@
                                        </image>
                                     </ImageView>
                                  </graphic></Button>
-                              <Button contentDisplay="TOP" layoutX="43.0" layoutY="129.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="90.0" text="Movimiento">
+                              <Button contentDisplay="TOP" layoutX="43.0" layoutY="129.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="90.0" text="Retirar">
                                  <graphic>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
