--- a/src/main/java/fxml/Despachos/GuiasDeRemision/GuiasDeRemision.fxml
+++ b/src/main/java/fxml/Despachos/GuiasDeRemision/GuiasDeRemision.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -23,11 +24,11 @@
             <TextField fx:id="cod_pedido_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
             <Button layoutX="136.0" layoutY="146.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
-            <TableView fx:id="tabla_envios" layoutX="13.0" layoutY="192.0" prefHeight="328.0" prefWidth="226.0">
+            <TableView fx:id="tabla_guias" layoutX="13.0" layoutY="192.0" prefHeight="328.0" prefWidth="226.0">
                <columns>
                   <TableColumn fx:id="columna_cliente" prefWidth="51.0" text="Cliente" />
-                  <TableColumn fx:id="columna_envio" prefWidth="79.0" text="Envio" />
-                  <TableColumn fx:id="columna_pedido" prefWidth="95.0" text="Pedido" />
+                  <TableColumn fx:id="columna_pedido" prefWidth="79.0" text="Pedido" />
+                  <TableColumn fx:id="columna_guia" prefWidth="95.0" text="Guia Remision" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -58,7 +59,7 @@
                   </ImageView>
                </children>
             </Pane>
-            <Button layoutX="136.0" layoutY="533.0" mnemonicParsing="false" onAction="#visualizar_envio" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+            <Button layoutX="136.0" layoutY="533.0" mnemonicParsing="false" onAction="#visualizar_guia" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="pedido_form" layoutX="260.0" prefHeight="572.0" prefWidth="750.0">
@@ -83,33 +84,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <TitledPane collapsible="false" layoutX="36.0" layoutY="163.0" prefHeight="127.0" prefWidth="679.0" text="Cliente">
-                                 <content>
-                                    <AnchorPane prefHeight="195.0" prefWidth="685.0">
-                                       <children>
-                                          <Label layoutX="29.0" layoutY="21.0" text="Nombre">
-                                             <font>
-                                                <Font size="14.0" />
-                                             </font>
-                                          </Label>
-                                          <Label layoutX="29.0" layoutY="61.0" text="RUC">
-                                             <font>
-                                                <Font size="14.0" />
-                                             </font>
-                                          </Label>
-                                          <Label layoutX="340.0" layoutY="61.0" text="D.N.I">
-                                             <font>
-                                                <Font size="14.0" />
-                                             </font>
-                                          </Label>
-                                          <TextField fx:id="nombre_cliente" layoutX="103.0" layoutY="19.0" prefHeight="25.0" prefWidth="545.0" />
-                                          <TextField fx:id="ruc_cliente" layoutX="103.0" layoutY="59.0" prefHeight="25.0" prefWidth="201.0" />
-                                          <TextField fx:id="dni_cliente" layoutX="444.0" layoutY="59.0" prefHeight="25.0" prefWidth="201.0" />
-                                       </children>
-                                    </AnchorPane>
-                                 </content>
-                              </TitledPane>
-                              <TitledPane collapsible="false" layoutX="36.0" layoutY="16.0" prefHeight="133.0" prefWidth="679.0" text="General">
+                              <TitledPane collapsible="false" layoutX="36.0" layoutY="195.0" prefHeight="133.0" prefWidth="679.0" text="General">
                                  <content>
                                     <AnchorPane prefHeight="100.0" prefWidth="677.0">
                                        <children>
@@ -118,13 +93,13 @@
                                                 <Font size="14.0" />
                                              </font>
                                           </Label>
-                                          <DatePicker fx:id="fecha_remision" layoutX="153.0" layoutY="24.0" prefHeight="25.0" prefWidth="160.0" />
+                                          <DatePicker fx:id="fecha_remision" layoutX="183.0" layoutY="23.0" prefHeight="25.0" prefWidth="160.0" />
                                           <Label layoutX="23.0" layoutY="62.0" prefHeight="20.0" prefWidth="114.0" text="Punto de partida">
                                              <font>
                                                 <Font size="14.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="partida_remision" layoutX="152.0" layoutY="60.0" prefHeight="25.0" prefWidth="163.0" />
+                                          <TextField fx:id="partida_remision" layoutX="182.0" layoutY="59.0" prefHeight="25.0" prefWidth="163.0" />
                                           <Label layoutX="366.0" layoutY="62.0" prefHeight="20.0" prefWidth="114.0" text="Punto de llegada">
                                              <font>
                                                 <Font size="14.0" />
@@ -141,28 +116,54 @@
                                     </AnchorPane>
                                  </content>
                               </TitledPane>
-                              <TitledPane collapsible="false" layoutX="36.0" layoutY="308.0" prefHeight="127.0" prefWidth="679.0" text="Transporte">
+                              <TitledPane collapsible="false" layoutX="36.0" layoutY="337.0" prefHeight="99.0" prefWidth="679.0" text="Transporte">
                                  <content>
-                                    <AnchorPane prefHeight="195.0" prefWidth="685.0">
+                                    <AnchorPane prefHeight="70.0" prefWidth="677.0">
                                        <children>
                                           <Label layoutX="29.0" layoutY="21.0" text="Marca del vehículo">
                                              <font>
                                                 <Font size="14.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="29.0" layoutY="61.0" text="Licencia de conducir">
-                                             <font>
-                                                <Font size="14.0" />
-                                             </font>
-                                          </Label>
                                           <TextField fx:id="marca_vehiculo_remision" layoutX="190.0" layoutY="19.0" prefHeight="25.0" prefWidth="138.0" />
-                                          <TextField fx:id="licencia_remision" layoutX="190.0" layoutY="59.0" prefHeight="25.0" prefWidth="459.0" />
-                                          <Label layoutX="378.0" layoutY="21.0" text="Placa del vehículo">
+                                          <Label layoutX="366.0" layoutY="21.0" text="Placa del vehículo">
                                              <font>
                                                 <Font size="14.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="placa_vehiculo_remision" layoutX="513.0" layoutY="19.0" prefHeight="25.0" prefWidth="138.0" />
+                                          <TextField fx:id="placa_vehiculo_remision" layoutX="493.0" layoutY="19.0" prefHeight="25.0" prefWidth="155.0" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </TitledPane>
+                              <TitledPane collapsible="false" layoutX="36.0" layoutY="14.0" prefHeight="174.0" prefWidth="679.0" text="Cliente">
+                                 <content>
+                                    <AnchorPane prefHeight="195.0" prefWidth="685.0">
+                                       <children>
+                                          <Label layoutX="29.0" layoutY="21.0" text="Nombre">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="29.0" layoutY="61.0" text="RUC">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="394.0" layoutY="62.0" text="D.N.I">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="nombre_cliente" layoutX="184.0" layoutY="19.0" prefHeight="25.0" prefWidth="464.0" />
+                                          <TextField fx:id="ruc_cliente" layoutX="182.0" layoutY="59.0" prefHeight="25.0" prefWidth="172.0" />
+                                          <TextField fx:id="dni_cliente" layoutX="473.0" layoutY="59.0" prefHeight="25.0" prefWidth="172.0" />
+                                          <Label fx:id="VerDocumentoLabel2" layoutX="29.0" layoutY="101.0" text="Codigo Pedido">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <ComboBox fx:id="envios_combobox" layoutX="183.0" layoutY="99.0" onAction="#combobox_accion" prefHeight="25.0" prefWidth="171.0" />
                                        </children>
                                     </AnchorPane>
                                  </content>
@@ -192,7 +193,7 @@
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                              </columnResizePolicy>
                                           </TableView>
-                                          <TextField fx:id="subTotal" editable="false" layoutX="569.0" layoutY="361.0" prefHeight="13.0" prefWidth="120.0" text="0.00" />
+                                          <TextField fx:id="peso_total" editable="false" layoutX="569.0" layoutY="361.0" prefHeight="13.0" prefWidth="120.0" text="0.00" />
                                           <Label layoutX="466.0" layoutY="365.0" text="Peso total" />
                                        </children>
                                     </AnchorPane>
