--- a/src/main/java/fxml/General/Kardex/Kardex.fxml
+++ b/src/main/java/fxml/General/Kardex/Kardex.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.General.Kardex.KardexController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.General.Kardex.KardexController">
    <children>
       <AnchorPane prefHeight="575.0" prefWidth="250.0">
          <children>
@@ -94,7 +94,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="producto_nombre" layoutX="159.0" layoutY="71.0" prefHeight="30.0" prefWidth="567.0">
+            <TextField fx:id="producto_nombre" editable="false" layoutX="159.0" layoutY="71.0" prefHeight="30.0" prefWidth="567.0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -104,7 +104,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="producto_codigo" layoutX="160.0" layoutY="109.0">
+            <TextField fx:id="producto_codigo" editable="false" layoutX="160.0" layoutY="109.0">
                <font>
                   <Font size="14.0" />
                </font>
