--- a/src/main/java/fxml/Despachos/Envios/Envios.fxml
+++ b/src/main/java/fxml/Despachos/Envios/Envios.fxml
@@ -15,24 +15,25 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.EnviosController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.EnviosController">
    <children>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextField fx:id="envio_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
+            <TextField fx:id="envio_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="149.0" />
             <Button layoutX="136.0" layoutY="178.0" mnemonicParsing="false" onAction="#buscar_envio" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
-            <TableView fx:id="tabla_envios" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="226.0">
+            <TableView fx:id="tabla_envios" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="265.0">
                <columns>
-                  <TableColumn fx:id="columna_cliente" prefWidth="67.0" text="Cliente" />
-                  <TableColumn fx:id="columna_envio" prefWidth="73.0" text="Cod.Envio" />
-                  <TableColumn fx:id="columna_pedido" prefWidth="85.0" text="Cod.Pedido" />
+                  <TableColumn fx:id="columna_cliente" prefWidth="57.0" text="Cliente" />
+                  <TableColumn fx:id="columna_envio" prefWidth="64.0" text="Cod.Envio" />
+                  <TableColumn fx:id="columna_pedido" prefWidth="73.0" text="Cod.Pedido" />
+                  <TableColumn fx:id="columna_estado" prefWidth="70.0" text="Estado" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <TextField fx:id="cliente_buscar" layoutX="119.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
+            <TextField fx:id="cliente_buscar" layoutX="119.0" layoutY="101.0" prefHeight="27.0" prefWidth="149.0" />
             <Label layoutX="20.0" layoutY="104.0" prefHeight="21.0" prefWidth="114.0" text="Cliente">
                <font>
                   <Font size="14.0" />
@@ -57,8 +58,8 @@
                   </ImageView>
                </children>
             </Pane>
-            <Button layoutX="136.0" layoutY="533.0" mnemonicParsing="false" onAction="#visualizar_orden_envio" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
-            <TextField fx:id="pedido_buscar" layoutX="119.0" layoutY="137.0" prefHeight="27.0" prefWidth="114.0" />
+            <Button layoutX="156.0" layoutY="533.0" mnemonicParsing="false" onAction="#visualizar_orden_envio" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+            <TextField fx:id="pedido_buscar" layoutX="119.0" layoutY="137.0" prefHeight="27.0" prefWidth="149.0" />
             <Label layoutX="20.0" layoutY="141.0" prefHeight="21.0" prefWidth="114.0" text="Cod. Pedido">
                <font>
                   <Font size="14.0" />
@@ -88,12 +89,12 @@
                <children>
                   <AnchorPane prefHeight="40.0" prefWidth="750.0" AnchorPane.bottomAnchor="277.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Label layoutX="14.0" layoutY="5.0" text="Cantidad">
+                        <Label layoutX="45.0" layoutY="4.0" text="Cantidad">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Spinner fx:id="cantidad_producto" layoutX="102.0" layoutY="3.0" prefHeight="25.0" prefWidth="58.0" />
+                        <Spinner fx:id="cantidad_producto" layoutX="119.0" layoutY="4.0" prefHeight="25.0" prefWidth="58.0" />
                         <Label layoutX="195.0" layoutY="6.0" text="Producto:">
                            <font>
                               <Font size="14.0" />
@@ -107,9 +108,9 @@
                         </Button>
                      </children>
                   </AnchorPane>
-                  <AnchorPane layoutX="33.0" layoutY="44.0" prefHeight="277.0" prefWidth="555.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="40.0">
+                  <AnchorPane layoutX="9.0" layoutY="44.0" prefHeight="277.0" prefWidth="555.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="40.0">
                      <children>
-                        <TableView fx:id="tabla_productos" prefHeight="277.0" prefWidth="555.0">
+                        <TableView fx:id="tabla_productos" layoutX="34.0" prefHeight="277.0" prefWidth="521.0">
                            <columns>
                               <TableColumn fx:id="columna_prod_cod" prefWidth="75.0" text="Código" />
                               <TableColumn fx:id="columna_prod_nombre" prefWidth="132.0" text="Nombre" />
@@ -136,11 +137,11 @@
                   </TitledPane>
                </children>
             </AnchorPane>
-            <TitledPane animated="false" collapsible="false" layoutX="1.0" layoutY="61.0" prefHeight="162.0" prefWidth="727.0" text="Información General">
+            <TitledPane animated="false" collapsible="false" layoutX="39.0" layoutY="61.0" prefHeight="162.0" prefWidth="689.0" text="Información General">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="712.0">
                      <children>
-                        <AnchorPane fx:id="pedidoForm" prefHeight="138.0" prefWidth="727.0">
+                        <AnchorPane fx:id="pedidoForm" layoutX="-2.0" prefHeight="138.0" prefWidth="729.0">
                            <children>
                               <Label layoutX="14.0" layoutY="14.0" text="Cliente:">
                                  <font>
