--- a/src/main/java/fxml/General/ParametrosDeSistema/ParametrosDeSistemaBotones.fxml
+++ b/src/main/java/fxml/General/ParametrosDeSistema/ParametrosDeSistemaBotones.fxml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
+<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="294.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
-      <Button contentDisplay="TOP" disable="true" layoutX="2.0" layoutY="10.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="88.0" text="Nuevo">
-         <graphic>
-            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../Imagenes/plus_icon.png" />
-               </image>
-            </ImageView>
-         </graphic></Button>
-      <Button contentDisplay="TOP" disable="true" layoutX="182.0" layoutY="10.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="88.0" text="Desactivar">
-         <graphic>
-            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../Imagenes/delete_icon.png" />
-               </image>
-            </ImageView>
-         </graphic></Button>
-      <Button contentDisplay="TOP" layoutX="92.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Guardar">
+      <Button contentDisplay="TOP" layoutX="7.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Guardar">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -31,11 +19,20 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Button contentDisplay="TOP" layoutX="272.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Cargar">
+      <Button contentDisplay="TOP" layoutX="197.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Cargar">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../Imagenes/weight-tool.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button contentDisplay="TOP" layoutX="101.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Desactivar">
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Imagenes/delete_icon.png" />
                </image>
             </ImageView>
          </graphic>
